[profile.release]
debug = true
lto = "thin"

[workspace]
members = [
    "proto",
]

[workspace.package]
version = "0.1.0"
authors = [
    "William Brown <william@blackhats.net.au>",
    ]
rust-version = "1.64"
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/kanidm/scim/"
repository = "https://github.com/kanidm/scim/"
keywords = ["scim", "protocol", "authentication", "chaos"]

[workspace.dependencies]
base64urlsafedata = "0.1.0"
lalrpop = "^0.19.7"
lalrpop-util = "^0.19"
regex = "1"
serde = "^1.0.142"
serde_json = "^1.0.86"
# Pinned due to higher versions removing ability to detect local timezone
time = "=0.2.27"
tracing = { version = "^0.1.37" }
tracing-subscriber = { version = "^0.3.16", features = ["env-filter"] }
url = "^2.3.1"
uuid = "^1.2.1"

