[profile.release]
debug = true
lto = "thin"

[workspace]
members = [
    "proto",
]

[workspace.package]
version = "0.2.2"
authors = [
    "William Brown <william@blackhats.net.au>",
    ]
rust-version = "1.69"
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/kanidm/scim/"
repository = "https://github.com/kanidm/scim/"
keywords = ["scim", "protocol", "authentication", "chaos"]

[workspace.dependencies]
base64urlsafedata = "0.5.0"
serde = "^1.0.142"
serde_json = "^1.0.86"
peg = "0.8"
time = { version = "^0.3.0", features = ["local-offset", "formatting", "parsing"] }
tracing = { version = "^0.1.37" }
tracing-subscriber = { version = "^0.3.16", features = ["env-filter"] }
url = "^2.3.1"
uuid = "^1.2.1"

