[package]
name = "scim_proto"
description = "SCIM protocol bindings for Rust"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
base64 = { workspace = true }
peg = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["std", "serde"] }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }

